@@ -120,7 +120,7 @@ public class Qualify  extends Skills
 			final int level=CMLib.ableMapper().qualifyingLevel(ableM,A);
 			if((CMLib.ableMapper().qualifiesByLevel(ableM,A))
 			&&(level<(CMLib.ableMapper().qualifyingClassLevel(ableM,A)+1))
-			&&(CMLib.ableComponents().getCommonSkillRemainder(ableM, A).specificSkillLimit() > 0)
+			&&(CMLib.ableComponents().getSpecialSkillRemainder(ableM, A).specificSkillLimit() > 0)
 			&&(!checkUnMet || CMLib.ableMapper().getUnmetPreRequisites(ableM,A).size()==0))
 			{
 				Integer acode =Integer.valueOf(A.classificationCode() & Ability.ALL_ACODES);
@@ -152,7 +152,7 @@ public class Qualify  extends Skills
 			&&(level>highestLevel)
 			&&(level<(CMLib.ableMapper().qualifyingClassLevel(ableM,A)+1))
 			&&(filter.passesFilter(A))
-			&&(CMLib.ableComponents().getCommonSkillRemainder(ableM, A).specificSkillLimit() > 0)
+			&&(CMLib.ableComponents().getSpecialSkillRemainder(ableM, A).specificSkillLimit() > 0)
 			&&(ableM.fetchAbility(A.ID())==null)
 			&&(!checkUnMet || CMLib.ableMapper().getUnmetPreRequisites(ableM,A).size()==0))
 				highestLevel=level;
@@ -173,7 +173,7 @@ public class Qualify  extends Skills
 				   &&(!CMLib.ableMapper().getSecretSkill(ableM,A.ID()))
 				   &&(ableM.fetchAbility(A.ID())==null)
 				   &&(filter.passesFilter(A))
-				   &&(CMLib.ableComponents().getCommonSkillRemainder(ableM, A).specificSkillLimit() > 0)
+				   &&(CMLib.ableComponents().getSpecialSkillRemainder(ableM, A).specificSkillLimit() > 0)
 				   &&(!checkUnMet || CMLib.ableMapper().getUnmetPreRequisites(ableM,A).size()==0))
 				{
 					if((++col)>2)
@@ -463,7 +463,7 @@ public class Qualify  extends Skills
 			else
 			if(!mob.isMonster())
 			{
-				final AbilityComponents.AbilityLimits limits = CMLib.ableComponents().getCommonSkillRemainders(mob);
+				final AbilityComponents.AbilityLimits limits = CMLib.ableComponents().getSpecialSkillRemainders(mob);
 				if(limits.commonSkills()<0)
 					limits.commonSkills(0);
 				if(limits.commonSkills() < Integer.MAX_VALUE/2)
@@ -476,6 +476,10 @@ public class Qualify  extends Skills
 					limits.nonCraftingSkills(0);
 				if(limits.nonCraftingSkills() < Integer.MAX_VALUE/2)
 					msg.append(L("\n\r^HYou may learn ^w@x1^H more non-crafting common skills.^N",""+limits.nonCraftingSkills()));
+				if(limits.languageSkills()<0)
+					limits.languageSkills(0);
+				if(limits.languageSkills() < Integer.MAX_VALUE/2)
+					msg.append(L("\n\r^HYou may learn ^w@x1^H more languages.^N",""+limits.languageSkills()));
 				
 				mob.session().wraplessPrintln(L("^!You now qualify for the following unknown abilities:^?@x1",msg.toString()));
 				mob.tell(L("\n\rUse the WILLQUALIFY command to discover what you will qualify for at higher levels."));
@@ -492,5 +496,4 @@ public class Qualify  extends Skills
 	{
 		return true;
 	}
-
 }
