@@ -1,3 +1,6 @@
+# Build 5.9.4 Released ??/??/2016
+   1. Qualify now shows language limits
+
 # Build 5.9.3 Released 05/08/2016
    1. Follower behavior now has a few more options.
    2. STAT [MOBNAME] will now give full editor stats also, and 
